# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  23 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected a 
  false positive on the ebuild.nesteddie check.  Basically it wasn't looking 
  to see if the line was active or not (fex # (die), bash skips, but repoman 
  caught).  Aside from that, that check is still capable of missing multiline 
  ebuild.nesteddie instances.  (#33011)

  22 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: Re-enabled
  binary QA interceptors, with a minor twist- the QA_INTERCEPTORS is used to 
  specify what QA interceptors will be defined.  These functions are no longer
  saved in the ebuild's stored env (exist *only* in depend phase), and have been 
  expanded to identify if it's the ebuild, or eclass that's triggering the QA 
  Notice (#54652).  The interceptors behaviour when the binary is missing has 
  been corrected to correctly output "missing command $bin: args".

  21 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/emerge: Fixed bug 
  which blocks a package itself with -U option.

  20 Jul 2004; Masatomo Nakano <nakano@gentoo.org> bin/repoman: Fixed
  profile cache problem. (#43601, #56170)

  20 Jul 2004; Marius Mauch <genone@gentoo.org> bin/ebuild.sh:
  added usev() and hasv() as complement to useq() and hasq().

  18 Jul 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Corrected 
  ebuild.allmasked check, so that it checks for an available version across all
  arches, rather then the last arch processed.  Typo fixed also- bugs #57356 and
  #57068.

  17 Jul 2004; Jason Stubbs <jstubbs@gentoo.org> bin/repoman: Added patch from